# qxf2-page-object-model

./: .gitignore  pyproject.toml
src/qxf2/: utility.py
utils/api_repo/: requirements.txt
