[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "qxf2"
version = "0.0.1"
license-files = { paths=["LICENSE"] }
authors = [
{"name"="shivahariP", "email"="shivahari@qxf2.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.hatch.metadata.hooks.requirements_txt] # hatch-requirements-txt package makes this possible
files = ["requirements.txt"]

[project.scripts]
create-repo = "qxf2.utility:create_repo"

[tool.hatch.build.targets.wheel.force-include] # This allows adding files from the repo to the package
"utils/api_repo" = "qxf2/templates/"

[tool.hatch.build.targets.wheel]
packages = ["src/qxf2"]

